--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Livre Mineure Majeure Info.pdf
 603516424-Eni-Intelligence-Artificielle-Vulgarisee.pdf
 Livre MineureMajeure info.pdf
+Livre mineure majeure informatique (1).pdf
